chat-service/chat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: shym/chat:latest
        readinessProbe:
          httpGet:
            path: /health
            port: 8092
          initialDelaySeconds: 120
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8092
          initialDelaySeconds: 130
          timeoutSeconds: 10
          failureThreshold: 10
        ports:
        - containerPort: 8092
