chat-service/chat-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat
  namespace: default
spec:
  selector:
    app: chat
  ports:
  - port: 8092
